<resources>
    <string name="app_name">Activity Control</string>
    <string name="limpar">Clear</string>
    <string name="campos_limpos">Fields cleared</string>
    <string name="nome_atividade">Activity name</string>
    <string name="prioridade">Priority</string>
    <string name="selecione_a_coluna">Select the column</string>
    <string name="a_fazer">To do</string>
    <string name="fazendo">Doing</string>
    <string name="finalizada">Finished</string>
    <string name="selecione_o_tipo">Select the activity type</string>
    <string name="lazer">Leisure</string>
    <string name="esporte">Sport</string>
    <string name="trabalho">Work</string>
    <string name="pessoal">Personal</string>
    <string name="outro">Other</string>
    <string name="facil">Easy</string>
    <string name="medio">Medium</string>
    <string name="dificil">Hard</string>
    <string name="salvar">Save</string>
    <string name="erro_nome">Add some activity name</string>
    <string name="entre_com_um_valor_de_coluna">Enter a column value</string>
    <string name="entre_com_um_valor_de_complexidade">Enter a complexity value</string>
    <string name="entre_com_um_valor_de_tipo">Enter a type value</string>
    <string name="salvo_com_sucesso">Saved successfully</string>
    <string name="nome">Name</string>
    <string name="status">Status</string>
    <string name="complexidade">Complexity</string>
    <string name="tipo">Type</string>
    <string name="universidade_tecnologica">Federal Technological University of Paraná - Cornélio Procópio Campus</string>
    <string name="adicionar">Add</string>
    <string name="sobre">About</string>
    <string name="autoria_do_app">App authorship</string>
    <string name="nome_do_aluno">Students name:</string>
    <string name="curso">Course:</string>
    <string name="email">Email:</string>
    <string name="Descricao_do_app">App description:</string>
    <string name="alterar_atividade">Modify activity</string>
    <string name="nova_atividade">New activity</string>
    <string name="por_favor_selecione_um_status">Please, select a status.</string>
    <string name="o_aplicativo_um_um_gerenciador_de_atividades">The app is an activity manager</string>
    <string name="p_s_gradua_o_em_java_turma_26">Postgraduate in Java - Class 26</string>
    <string name="confirmacao">Confirmação</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="deseja_realmente_apagar">Deseja realmente apagar essa atividade?</string>
</resources>